<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/toolbar_color">

        <TextView
            android:id="@+id/profileTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/allTrainings"
            android:textColor="@color/main_blue"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/signOutTrainings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:layout_alignParentEnd="true"
            android:text="@string/signOut"
            android:textColor="@color/main_blue"
            android:textSize="15sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/noTrainings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/empty_list"
        android:textColor="@color/main_blue"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewTopRated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_color"></androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>
</RelativeLayout>